feat: add email password auth
